[gd_scene load_steps=2 format=3 uid="uid://blfxsh5dcj5qa"]

[ext_resource type="Script" path="res://Game9/UI/OptionsMenu/options_menu.gd" id="1_3eenm"]

[node name="OptionsMenu" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -165.5
offset_right = 286.0
offset_bottom = 165.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_3eenm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionsHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"
horizontal_alignment = 1

[node name="DisplayHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Display:"

[node name="MaxFPSContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MaxFPSLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Max FPS:"

[node name="MaxFPSSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MaxFPSValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="AudioHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio:"

[node name="MasterMuteContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/MasterMuteContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MasterMuteLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MasterMuteContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Master Mute:"

[node name="MasterMuteCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/MasterMuteContainer"]
layout_mode = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MusicVolumeValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="SoundVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SoundVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Sound Volume:"

[node name="SoundVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="SoundVolumeValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="OKButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "OK"

[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer/MaxFPSSlider" to="." method="_on_max_fps_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MaxFPSContainer/MaxFPSSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MasterMuteContainer/MasterMuteCheckbox" to="." method="_on_master_mute_checkbox_pressed"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/SoundVolumeContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
